Macroed rings and matrices

--- a/preamble.tex
+++ b/preamble.tex
@@ -95,7 +95,6 @@ vlined]{algorithm2e}
 
 %\setlength{\parskip}{0.4em}
 
-
 %various thresholds
 \DeclareMathOperator{\lct}{lct}
 \DeclareMathOperator{\fpt}{fpt}
@@ -177,6 +176,18 @@ vlined]{algorithm2e}
 \newcommand{\QQ}{\mathbb{Q}}
 \newcommand{\NN}{\mathbb{N}}
 \renewcommand{\emptyset}{\varnothing}
+
+%rings
+\newcommand{\ringR}{R}
+\newcommand{\ringS}{S}
+\newcommand{\ringA}{A}
+\newcommand{\ringB}{B}
+
+%matrices
+\newcommand{\matA}{\mathbf{A}}
+\newcommand{\matB}{\mathbf{B}}
+\newcommand{\matC}{\mathbf{C}}
+\newcommand{\matM}{\mathbf{M}}
 
 \newcommand{\numvars}{m}
 
